	PR target/81408 	* tree-ssa-loop-niter.c (number_of_iterations_exit): Dump missed 	optimization for loop niter analysis.

gcc/testsuite
	* g++.dg/tree-ssa/pr81408.C: New.
	* gcc.dg/tree-ssa/pr19210-1.c: Check dump message rather than warning.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@250304 138bc75d-0d04-0410-961f-82ee72b054a4